# ChangeLog for sys-cluster/lam-mpi
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-cluster/lam-mpi/ChangeLog,v 1.81 2009/11/06 17:42:01 jsbronder Exp $

  06 Nov 2009; Justin Bronder <jsbronder@gentoo.org> -lam-mpi-7.0.4.ebuild,
  -lam-mpi-7.1.2.ebuild, -lam-mpi-7.1.4.ebuild:
  Remove old versions.

  06 Nov 2009; Jeroen Roovers <jer@gentoo.org> lam-mpi-7.1.4-r1.ebuild:
  Stable for HPPA (bug #245439).

  23 Sep 2009; Patrick Lauer <patrick@gentoo.org> lam-mpi-7.0.4.ebuild,
  lam-mpi-7.1.2.ebuild:
  Remove virtual/libc

  13 Sep 2009; Raúl Porcel <armin76@gentoo.org> lam-mpi-7.1.4-r1.ebuild:
  ia64/sparc stable wrt #245439

  29 Aug 2009; nixnut <nixnut@gentoo.org> lam-mpi-7.1.4-r1.ebuild:
  ppc stable #245439

  02 Aug 2009; Markus Meier <maekke@gentoo.org> lam-mpi-7.1.4-r1.ebuild:
  amd64 stable, bug #245439

  16 Jul 2009; Christian Faulhammer <fauli@gentoo.org>
  lam-mpi-7.1.4-r1.ebuild:
  stable x86, bug 245439

  15 Jul 2009; Justin Bronder <jsbronder@gentoo.org>
  lam-mpi-7.1.4-r1.ebuild:
  Remove sweep to avoid conflict with media-libs/sweep. #245439.

  10 Jul 2009; Justin Bronder <jsbronder@gentoo.org>
  lam-mpi-7.1.4-r1.ebuild:
  Disable totalview, see #245439 and #276194

  02 Mar 2009; Brent Baude <ranger@gentoo.org> lam-mpi-7.1.4-r1.ebuild:
  Marking lam-mpi-7.1.4-r1 ppc64 for bug 245439

  26 Jan 2009; Justin Bronder <jsbronder@gentoo.org>
  lam-mpi-7.1.4-r1.ebuild:
  Conditionally apply the libtool compatibility patch.

*lam-mpi-7.1.4-r1 (25 Jan 2009)

  25 Jan 2009; Justin Bronder <jsbronder@gentoo.org>
  +files/lam-mpi-7.1.4-libtool.patch, +lam-mpi-7.1.4-r1.ebuild:
  Patch to fix when using libtool-2.2+, #228183. Also remove sweep to avoid
  file conflict with media-libs/sweep, #245439 c2.

  18 Nov 2008; Jeroen Roovers <jer@gentoo.org> lam-mpi-7.1.4.ebuild:
  Stable for HPPA (bug #245439).

  28 Jul 2008; Panagiotis Christopoulos <pchrist@gentoo.org> metadata.xml: