@@ -2,10 +2,7 @@ AUX 7.1.2-lam_prog_f77.m4.patch 529 RMD160 1693107a9e2fa7fbef0e6b59f082ab8082a61
 AUX 7.1.2-liblam-use-extra-libs.patch 490 RMD160 f52c0c3490a5d7dd9fa3993032c64c5fd7ef4295 SHA1 dad163d483a8a35cf4cb3a5cb7c572e7f21fabf8 SHA256 580a84ef0364d9ea9bf204024906d18b7b00338e48cfafdc04f2d82d9c4b6870
 AUX 7.1.4-as-needed.patch 3713 RMD160 eec6deda8b43b6033d4b8487cfbe43b05f2924c6 SHA1 da07f00b60aa20ceb9d3629cc6e5ee1fed9c135d SHA256 3eb3e1a6ca0f657c0676cd16ee883e27c65093cd19a48ba675f41c8f8ecf03d8
 AUX lam-mpi-7.1.4-libtool.patch 757 RMD160 9cf13e2e3b2a11a1e2027c88b6f75302ca0d3651 SHA1 0a4404ce2648d99a6b3a007722881d0995734a07 SHA256 edbff0e9524b0549339aa645cceaf89f5d7fe696e34670d84eb27873ee516fac
-DIST lam-7.1.2.tar.bz2 7851483 RMD160 4aeb62d41dc0b6f910424feb1046c6925bd620c4 SHA1 fa0c3278f9420b218fa7a4ef9b052ec6d93baa0c SHA256 b3826e79f1a674ed275d2a0e32895aefe63d4278126bd5fa01dbe43cc1c1960b
 DIST lam-7.1.4.tar.bz2 7865813 RMD160 6c9c6338391472d4cd2572c409cb92360e7fd799 SHA1 ce8a983004f31d5960d34efe3ed9ac489e9dfc9d SHA256 d66c205f57d9ffc38dbfb81faef8b586ef2b9e08853034c0472ef4ae45803d2e
-EBUILD lam-mpi-7.1.2.ebuild 2642 RMD160 5bc04ee5eded992a0bab176ed93efdfa1bc3c3e1 SHA1 9649f3547161f4e510a8e4028a47ac8c9532373e SHA256 4345d64d7484a47280dfde9191652d9cab8456432518cf98416b1f8cfbb7e346
-EBUILD lam-mpi-7.1.4-r1.ebuild 4939 RMD160 1f7c695886744d520da8e220e1b5727fd9bc723a SHA1 439da4e4eeaa911448316d4c586d76bd036a3704 SHA256 8f632ca6de650690b19b67d080ff1b3c9c001b46c6150d4ac9967699a736a403
-EBUILD lam-mpi-7.1.4.ebuild 4009 RMD160 72b3e99a51ec03938512e7539ef65b2d32c1e15a SHA1 46086637d3e8e61da79090488aa2ad47ca6d2229 SHA256 9450cde91ae1d04f5c9a1bcdf4da297430d3df9e2a60d1eb5e1799eb05a948cd
-MISC ChangeLog 13202 RMD160 86612d8e6cba86cd872b90e759cd55ee44f9adb6 SHA1 a6ed74eef4a393086f232b8f20bbfe52a1f5be50 SHA256 a2638b121533294aa0102dbff52ea8662bd518c007ef1f2b0cec981746e68e85
+EBUILD lam-mpi-7.1.4-r1.ebuild 4961 RMD160 a13b1ebf59ae33b38617ccf6a807933eb10fe0b2 SHA1 4f98ffd39233ea3c5617c2ff136c23a662050419 SHA256 499792b1d2b1ed01757648f1c55d71dc8e5b267cbcdddae61cc6bb699e5f7e85
+MISC ChangeLog 13324 RMD160 1d6004fbac92ad0a9661b374dd3a809d2f1af8c0 SHA1 ee6c6ff11006b428c0b13a79caf1cefb7032984c SHA256 a80e0f43f1ee41d92eb226903cfb7e55d813ddecb9ce61d46bdf437b61f21b02
 MISC metadata.xml 506 RMD160 b07d8e3f5f1b8a9b4c9ab9106e0219382256ef59 SHA1 7f2fa66c0847b74f32827241201d30a0d9050759 SHA256 98f3e810fe814223972ecdf54cbb519ce2d687cc5bbac4ef739d44d0efe451b0
